Fix z-indexing of headers and add buttons for student and events page

--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -712,14 +712,6 @@ video {
   top: 2rem;
 }
 
-.right-1\/2 {
-  right: 50%;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
 .z-20 {
   z-index: 20;
 }
@@ -738,6 +730,10 @@ video {
 
 .z-\[100\] {
   z-index: 100;
+}
+
+.z-\[80\] {
+  z-index: 80;
 }
 
 .m-4 {
@@ -1064,10 +1060,6 @@ video {
   height: 100vh;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
 .min-h-16 {
   min-height: 4rem;
 }
@@ -1277,11 +1269,6 @@ video {
 
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1817,10 +1804,6 @@ video {
   --tw-gradient-to: #e2e8f0 var(--tw-gradient-to-position);
 }
 
-.fill-blue-600 {
-  fill: #2563eb;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -2253,11 +2236,6 @@ video {
 .text-zinc-800 {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3111,11 +3089,6 @@ video {
   .dark\:text-gray-500 {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgb(75 85 99 / var(--tw-text-opacity));
   }
 
   .peer:checked ~ .dark\:peer-checked\:bg-teal-600 {
